manage cupon,voucher,inventory,settings

--- a/public/css/backend/style.css
+++ b/public/css/backend/style.css
@@ -3707,7 +3707,7 @@ Invoice
 }
 
 .account-pages {
-  background: url("../images/bg.jpg");
+  background: url("./../../../public/images/backend/bg.jpg");
   position: absolute;
   background-size: cover;
   height: 100%;
