--- a/public/css/frontend/mystyle.css
+++ b/public/css/frontend/mystyle.css
@@ -10,6 +10,8 @@
     right: 0;
     margin-left: 15px;
     margin-top: 1px;
+    max-height: 135px;
+    overflow-y: auto !important;
 }
 
 .autocomplete-items div {
